# lunarbase

./: .env.local  .env.production  .gitignore  .uncommentrc.toml  CHANGELOG.md  Cargo.toml  FEATURES.md  LOCALSTACK_S3_TESTING_GUIDE.md  OWNERSHIP_IMPLEMENTATION_PLAN.md  PLAN_MIGRACJI_JWT.md  README.md  S3_FILE_UPLOAD_IMPLEMENTATION_PLAN.md  SCRIPTS_README.md  api-docs.json  build.rs  commands.md  cookies.txt  db.sqlite  diesel.toml  docker-compose.localstack.yml  env.example  resend-cid.md  roadmap.md  start-with-localstack.sh  stop-localstack.sh  test.sqlite
.vercel/: project.json
admin-ui/: db.sqlite  index.html  nocta.config.json  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.css  App.tsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
admin-ui/src/components/collections/: CollectionDetailsSheet.tsx  CollectionPermissionsSheet.tsx  CollectionsHeader.tsx  CreateCollectionSheet.tsx  EditCollectionSheet.tsx  constants.ts  index.ts  validation.ts
admin-ui/src/components/dashboard/: CollectionsOverviewCard.tsx  DashboardHeader.tsx  HealthStatusCard.tsx  QuickActionsCard.tsx  StatCard.tsx  index.ts
admin-ui/src/components/layout/: Sidebar.tsx  ThemeProvider.tsx
admin-ui/src/components/metrics/: MetricCard.tsx  MetricsHeader.tsx  MetricsSummary.tsx  RawMetricsViewer.tsx  index.ts
admin-ui/src/components/ownership/: OwnershipBadge.tsx  TransferOwnership.tsx  index.ts
admin-ui/src/components/permissions/: PermissionsHeader.tsx  index.ts
admin-ui/src/components/records/: CollectionRecordsEditSheet.tsx  CollectionRecordsHeader.tsx  CreateRecordSheet.tsx  DeleteRecordDialog.tsx  EditRecordSheet.tsx  EmptyCollectionRecordsState.tsx  EmptyRecordsState.tsx  RecordsHeader.tsx  RecordsPagination.tsx  RecordsTable.tsx  RichTextEditor.tsx  constants.ts  index.ts  validation.ts
admin-ui/src/components/roles/: CreateRoleSheet.tsx  EditRoleSheet.tsx  PermissionDetailsSheet.tsx  RolesHeader.tsx  constants.ts  index.ts  validation.ts
admin-ui/src/components/settings/: ApiSettingsPanel.tsx  AuthSettingsPanel.tsx  DatabaseSettingsPanel.tsx  EmailSettingsPanel.tsx  OAuthSettingsPanel.tsx  SecuritySettingsPanel.tsx  SettingsHeader.tsx  StorageSettingsPanel.tsx  validation.ts
admin-ui/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  dialog.tsx  file-upload.tsx  form.tsx  input.tsx  json-editor.tsx  popover.tsx  progress.tsx  select.tsx  sheet.tsx  table.tsx  tabs.tsx  textarea.tsx  toast-context.tsx  toast-types.ts  toast.tsx
admin-ui/src/components/users/: CreateUserSheet.tsx  EditUserSheet.tsx  UserDetailsSheet.tsx  UsersHeader.tsx  constants.ts  index.ts  validation.ts
admin-ui/src/components/websocket/: BroadcastDialog.tsx  WebSocketActivity.tsx  WebSocketConnections.tsx  WebSocketHeader.tsx  WebSocketStats.tsx  WebSocketStatsCard.tsx  WebSocketSubscriptions.tsx  constants.ts  index.ts
admin-ui/src/contexts/: AuthContext.tsx  auth-context.ts
admin-ui/src/hooks/: index.ts  useAllRecordsQuery.ts  useAuth.ts  useCollectionRecordsQuery.ts  useCollectionsQuery.ts  useDashboardQueries.ts  useDebounce.ts  useMetricsQuery.ts  usePrefetch.ts  useTheme.ts  useToast.ts  useUsersQuery.ts  useWebSocketQueries.ts
admin-ui/src/hooks/collections/: index.ts  useCollectionMutations.ts  useCollections.ts
admin-ui/src/lib/: api.ts  toast.ts
admin-ui/src/routes/: __root.tsx  collections.tsx  dashboard.tsx  forgot-password.tsx  index.tsx  login.tsx  metrics.tsx  permissions.tsx  register.tsx  reset-password.tsx  roles.tsx  settings.tsx  users.tsx  websocket.tsx
admin-ui/src/stores/: auth-persist.store.ts  auth.store.ts  client.store.ts  collections-persist.store.ts  collections.store.ts  index.ts  permissions.store.ts  records.store.ts  ui.store.ts  users-persist.store.ts  users.store.ts
admin-ui/src/types/: api.ts  store.types.ts
docs/: EC2_DEPLOYMENT_GUIDE.md  LOCALSTACK_SETUP_GUIDE.md  PERMISSIONS_SYSTEM.md  TLS_SETUP_GUIDE.md
migrations/2025-07-10-203455_create_users/: down.sql  up.sql
migrations/2025-07-10-204837_create_collections/: down.sql  up.sql
migrations/2025-07-11-164552_create_permissions/: down.sql  up.sql
migrations/2025-07-14-180342_create_blacklisted_tokens/: down.sql  up.sql
migrations/2025-07-30-213208_add_avatar_url_to_users/: down.sql  up.sql
migrations/2025-08-01-150508_create_verification_tokens/: down.sql  up.sql
migrations/2025-08-09-120944_create_system_settings/: down.sql  up.sql
migrations/2025-08-09-152257_add_backup_settings/: down.sql  up.sql
migrations/2025-09-02-155219_add_web_server_settings/: down.sql  up.sql
migrations/2025-09-02-164406_add_security_headers_settings/: down.sql  up.sql
migrations/2025-09-02-220159_add_external_integrations_settings/: down.sql  up.sql
nocta-ui-docs/: nextjs.mdx
src/: db.sqlite  embedded_assets.rs  lib.rs  main.rs  query_engine.rs  schema.rs  server.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: mod.rs  serve.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: admin.rs  auth.rs  avatar_proxy.rs  backup.rs  collections.rs  configuration.rs  embedded_admin.rs  health.rs  image_upload.rs  metrics.rs  mod.rs  ownership.rs  permissions.rs  record_permissions.rs  users.rs  websocket.rs
src/middleware/: auth.rs  compression.rs  metrics.rs  mod.rs  permissions.rs  security_headers.rs
src/models/: blacklisted_token.rs  collection.rs  mod.rs  permissions.rs  system_setting.rs  user.rs  verification_token.rs  websocket.rs
src/services/: admin_service.rs  backup_service.rs  collection_service.rs  configuration_manager.rs  configuration_service.rs  email_service.rs  mod.rs  ownership_service.rs  permission_service.rs  s3_service.rs  websocket_service.rs
src/utils/: auth_error.rs  client_ip.rs  cookie_service.rs  jwt_service.rs  mod.rs  oauth_service.rs
tests/: collections_integration_tests.rs  configuration_integration_tests.rs  file_upload_integration_tests.rs  oauth_integration_tests.rs  permissions_integration_tests.rs  websocket_integration_tests.rs
tests/common/: mod.rs
tmp/localstack/cache/: machine.json
(+27 files in other folders)
