[package]
name = "lunarbase"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["tokio", "ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = ["chrono", "r2d2", "sqlite"], default-features = false }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
utoipa-redoc = { version = "4.0", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sysinfo = "0.36.0"
prometheus = "0.14.0"
axum-prometheus = "0.8.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
