[package]
name = "lunarbase"
version = "1.0.0"
authors = ["Marek Jóźwiak <hexthecoder@gmail.com>"]
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["tokio", "ws", "multipart", "http2"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = ["chrono", "r2d2", "sqlite"], default-features = false }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
# TLS/SSL support for HTTP/2
tokio-rustls = "0.26.0"
rustls = { version = "0.23.0", features = ["aws-lc-rs"] }
rustls-pemfile = "2.1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
utoipa-redoc = { version = "4.0", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sysinfo = "0.36.0"
prometheus = "0.14.0"
axum-prometheus = "0.8.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"
resend-rs = "0.8.0"
aws-sdk-s3 = "1.100.0"
aws-config = "1.8.3"
tokio-util = "0.7.15"
thiserror = "2.0.12"
base64 = "0.22.1"
tokio-cron-scheduler = "0.14.0"
flate2 = "1.1.2"
rust-embed = { version = "8.7.2", features = ["debug-embed", "include-exclude"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

# Optimizations for smaller binary size
[profile.release]
# Maximum size optimization
opt-level = "z"
# Link Time Optimization - better optimizations between crates
lto = true
# Use panic=abort instead of unwind (smaller size)
panic = "abort"
# Remove debug symbols
strip = true
# Single codegen unit for better optimization
codegen-units = 1
